--- a/styles.css
+++ b/styles.css
@@ -146,6 +146,65 @@ button:hover {
     color: #133e35;
 }
 
+/* Conatct */
+.contact 
+    {
+        text-align: center;
+    }
+
+    .contact-section .container {
+        background: white;
+        padding: 20px;
+        border-radius: 8px;
+        box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        width: 300px;
+        text-align: center;
+        margin: 50px auto;
+    }
+    
+    .contact-section h2 {
+        margin-bottom: 20px;
+    }
+    
+    .form-group {
+        margin-bottom: 15px;
+        text-align: left;
+    }
+    
+    label {
+        display: block;
+        margin-bottom: 5px;
+    }
+    
+    input, textarea {
+        width: 100%;
+        padding: 8px;
+        margin-top: 3px;
+        border: 1px solid #ccc;
+        border-radius: 4px;
+        box-sizing: border-box;
+    }
+    
+    button {
+        background-color: #133e35;
+        color: white;
+        padding: 10px 15px;
+        border: none;
+        border-radius: 4px;
+        cursor: pointer;
+        width: 100%;
+    }
+    
+    button:hover {
+        color: honeydew;
+        background-color: #133e35;
+    }
+    
+    .response-message {
+        margin-top: 15px;
+        color: #133e35;
+    }
+
 /* Footer */
 footer {
     background-color: #133e35;
