--- a/styles.css
+++ b/styles.css
@@ -205,6 +205,70 @@ button:hover {
         color: #133e35;
     }
 
+    /* Cart */
+    .cart-container {
+        display: flex;
+        flex-direction: column;
+        gap: 20px;
+    }
+    
+    .cart-item {
+        display: flex;
+        align-items: center;
+        background-color: #fff;
+        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+        padding: 20px;
+        border-radius: 10px;
+    }
+    
+    .cart-item img {
+        width: 100px;
+        height: 100px;
+        object-fit: cover;
+        border-radius: 10px;
+        margin-right: 20px;
+    }
+    
+    .item-details {
+        display: flex;
+        flex-direction: column;
+        gap: 10px;
+        flex: 1;
+    }
+    
+    .item-description {
+        font-size: 16px;
+        color: #333;
+    }
+    
+    .item-actions {
+        display: flex;
+        align-items: center;
+        gap: 10px;
+    }
+    
+    .add-button {
+        padding: 10px 20px;
+        background-color: #133e35;
+        color: #fff;
+        border: none;
+        border-radius: 5px;
+        cursor: pointer;
+    }
+    
+    .add-button:hover {
+        background-color: #fcfaf2;
+        color: black;
+    }
+    
+    .amount-button {
+        width: 60px;
+        padding: 10px;
+        border: 1px solid #ccc;
+        border-radius: 5px;
+        text-align: center;
+    }
+
 /* Footer */
 footer {
     background-color: #133e35;
