--- a/styles.css
+++ b/styles.css
@@ -210,6 +210,9 @@ button:hover {
         display: flex;
         flex-direction: column;
         gap: 20px;
+        margin: 70px;
+        padding: 50px ;
+
     }
     
     .cart-item {
